mod get by url
